examen sin crud

--- a/01-http/Examen/examen/views/cliente/menu_cliente.ejs
+++ b/01-http/Examen/examen/views/cliente/menu_cliente.ejs
@@ -134,7 +134,7 @@
 
                 </div>
                 <div>
-                    <form  action="/api/pedido/verPedidos" method="post">
+                    <form  action="/api/pedido/verPedidos" method="get">
 
                         <button type="submit" class="btn btn-default block opciones">Ver pedidos</button>
                     </form>
