--- a/01-http/Examen/examen/views/cliente/ver_pedidos.ejs
+++ b/01-http/Examen/examen/views/cliente/ver_pedidos.ejs
@@ -20,14 +20,14 @@
 
     function recargap() {
 
-        const nombreMetodo ='recarga';
+        const nombreMetodo ='recargaPedido';
         const datos = {
-            accion: 'recargar'
+            accion: 'recargarPedido'
 
         };
 
 
-      
+
         socket.emit(
             nombreMetodo,
             datos,
@@ -47,7 +47,7 @@
     <div class="col-sm-10">
         <div class="card">
             <div class="card-body">
-                <h2 class="card-title text-center">Despacha pedidos</h2>
+                <h2 class="card-title text-center">MIS PEDIDOS</h2>
 
                 <table class="table table-striped" id="tableRow">
                     <thead>
@@ -64,15 +64,16 @@
                             <td><%= pedido.ipPedido %></td>
                             <td><%= pedido.estadoPedido %></td>
                             <td><%= pedido.totalConImpuesto %></td>
-
+                            <% if(pedido.estadoPedido!='Despachado'){ %>
                             <td>
-                                                            <form action="/api/pedido/despachar/<%= pedido.ipPedido %>"
-                                                                  method="post">
-                                <label for="idPedido"></label>
-                                <input id="idPedido" type="text" name="idPedido" value="<%= pedido.idPedido %>" hidden>
-                                <button onclick="recargap()" type="submit">Despachar</button>
-                                                            </form>
+                                <form action="/api/pedido/cancelar/<%= pedido.ipPedido %>"
+                                      method="post">
+                                    <label for="idPedido"></label>
+                                    <input id="idPedido" type="text" name="idPedido" value="<%= pedido.idPedido %>" hidden>
+                                    <button class="btn btn-danger" onclick="recargap()" type="submit">Cancelar</button>
+                                </form>
                             </td>
+                            <% } %>
                         </tr>
                     <% }) %>
                     </tbody>
@@ -82,13 +83,7 @@
         </div>
     </div>
 </div>
-<script>
-    function remover(rowid) {
-        var row = document.getElementById("181");
-        console.log(row)
-        row.parentNode.removeChild(row);
-    }
-</script>
+
 <div class="col-sm-1"></div>
 </div>
 
@@ -122,6 +117,17 @@
         }
     );
     socket.on(
+        'recargaPedido', //nombre del evento
+        (data) => {
+            console.log('Estamos recargados', data);
+
+
+            location.reload()
+            //socket.disconnect();
+            //socket.connect()
+        }
+    );
+    socket.on(
         'saludaron', //nombre del evento
         (data) => {
             console.log('Estamos recargados', data);
@@ -131,38 +137,6 @@
             //socket.connect()
         }
     );
-    socket.on(
-        'comprado',
-        (pedido) => {
-
-            const tableRow = 'tableRow';
-            const contenedor = document.getElementById(tableRow);
-            const etiqueta = 'tr';
-            const linea = document.createElement(etiqueta);
-            const contenidoHTML = `
-             <td>
-                ${pedido.nombreUsuario}
-             </td>
-             <td>
-                ${pedido.estadoPedido}
-             </td>
-             <td>
-                ${pedido.totalConImpuesto}
-             </td>
-             <td>
-                            <form action="/api/pedido/despachar/${pedido.idPedido}" method="post">
-                                <label for="idPedido"></label>
-                                <input id="idPedido" type="text" name="idPedido" value="${pedido.id}" hidden>
-                                <button onclick="recargap()" type="submit" class="btn btn-success">Despachar</button>
-                            </form>
-             </td>
-
-
-`;
-            linea.innerHTML = contenidoHTML;
-            anadirEtiqueta(contenedor, linea);
-        }
-    )
 
     function anadirEtiqueta(contenedor, elementoHTML) {
         contenedor.appendChild(elementoHTML);
