--- a/01-http/Examen/examen/views/menu/menu.ejs
+++ b/01-http/Examen/examen/views/menu/menu.ejs
@@ -30,27 +30,39 @@
 </head>
 <body>
 <div class="panel panel-default container encabezado">
-    <div class="panel-heading text-right principal">
-        <div class="col-md-8 text-right"><h3 id="nombre"><%=tempNombre%></h3></div>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>ICBN</th>
+            <th>Nombre</th>
+            <th>Número de páginas</th>
+            <th>Edición</th>
+            <th>Fecha publicación</th>
+            <th>Nombre Editorial</th>
 
-        <div class="col-md-4">
-            <form method="get" action="/api/salir">
-             <button  class="btn btn-danger">Salir</button>
-            </form>
-        </div>
+        </tr>
+        <% arregloHijos.forEach((libro)=>{ %>
+            <tr>
+                <td><%= libro.ICBN %></td>
+                <td><%= libro.nombre %></td>
+                <td><%= libro.numeroPaginas %></td>
+                <td><%= libro.edicion %></td>
+                <td><%= libro.fechaPublicacion %></td>
+                <td><%= libro.nombreEditorial %></td>
+                <td><%= libro.autorId %></td>
 
-    </div>
-    <div class="panel-body">
-        <div class="col-md-4">
+                <td>
+                    <form action="/api/libros/eliminar"
+                          method="post">
+                        <input type="number"  name="id" value="<%=libro.id%>" hidden >
+                        <input type="hidden" name="idAutor" class="form-control" id="Id" value=<%= id %>>
+                        <button class="btn btn-danger">Eliminar</button>
+                    </form>
+                </td>
 
-        </div>
-        <div  class="col-md-4 text-center">
-            <form method="get" action="/api/gestionarAutores">
-                <button class="btn btn-success btnGestion">GESTIONAR LIBROS</button>
-            </form>
-        </div>
-        <div class="col-md-4"></div>
-    </div>
+            </tr>
+        <% }) %>
+    </table>
 </div>
 
 
