--- a/01-http/Examen/examen/views/gestion/crearLibro.ejs
+++ b/01-http/Examen/examen/views/gestion/crearLibro.ejs
@@ -61,7 +61,11 @@
                 </div>
                 <div class="form-group">
                     <label for="autorIdId">Autor id:</label>
-                    <input type="hidden" name="autorId" class="form-control" id="autorIdId" value=<%= id%>>
+                    <input  name="autor" class="form-control" id="autorIdId" value=<%= id%>>
+                </div>
+                <div class="form-group">
+                    <label for="precioId">Precio:</label>
+                    <input  name="precio" class="form-control" id="precioId">
                 </div>
 
                 <button class="btn btn-success">Guardar</button>
