aumentado update de libros

--- a/01-http/Examen/examen/views/gestion/gAutor.ejs
+++ b/01-http/Examen/examen/views/gestion/gAutor.ejs
@@ -67,7 +67,7 @@
                 </tr>
                 <% arregloAutores.forEach((autor)=>{ %>
                     <tr>
-                        <td><%= autor.nombre %></td>
+                        <td><%= autor.apellidos %></td>
                         <td><%= autor.apellidos %></td>
                         <td><%= autor.fechaNacimiento %></td>
                         <td><%= autor.numeroLibros %></td>
