--- a/01-http/Examen/examen/views/cliente/pedido.ejs
+++ b/01-http/Examen/examen/views/cliente/pedido.ejs
@@ -202,8 +202,8 @@
         <table class="table table-hover">
             <thead>
             <tr>
+                <th>ICBN</th>
                 <th>Nombre</th>
-                <th>Descripción</th>
                 <th>Precio</th>
                 <th>Opciones</th>
             </tr>
